# cherrypy-base

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  server.py
app/controllers/: root.py
app/controllers/api/v1/: health.py  users.py
app/models/: user.py
app/plugins/: database.py
app/templates/: index.html
app/tools/: auth.py
config/: app.conf  settings.py
tests/: test_health.py  test_users_get.py
