[project]
name = "cherrypy-base"
version = "0.1.0"
description = "CherryPy application skeleton"
requires-python = ">=3.11"
dependencies = [
    "cherrypy==18.10.0",
    "jinja2==3.1.6",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
